# WSICS

./: .gitignore  CMakeLists.txt  Dockerfile  SlideStandardization.sln  readme.md
SlideStandardization/: CMakeLists.txt  CxCyWeights.cpp  CxCyWeights.h  HSDmodel.cpp  HSDmodel.h  LevelReading.cpp  LevelReading.h  Main.cpp  MaskGeneration.cpp  MaskGeneration.h  MiscFunctionality.cpp  MiscFunctionality.h  MiscMatrixOperations.cpp  MiscMatrixOperations.h  NormalizedLutCreation.cpp  NormalizedLutCreation.h  PixelClassificationHE.cpp  PixelClassificationHE.h  SlideStandardization.vcxproj  SlideStandardization.vcxproj.filters  SlideStandardizationCLI.cpp  SlideStandardizationCLI.h  Standardization.cpp  Standardization.h  Standardization.hpp  TransformCxCyDensity.cpp  TransformCxCyDensity.h
SlideStandardization/BLOB_Operations/: BLOB.cpp  BLOB.h  BLOB_Operations.cpp  BLOB_Operations.h  BLOB_Window.cpp  BLOB_Window.h
SlideStandardization/Classifier/: Classifier.cpp  Classifier.h  NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  NaiveBayesFeatureClassifier.cpp  NaiveBayesFeatureClassifier.h
SlideStandardization/HE_Staining/: HE_Classifier.cpp  HE_Classifier.h  MaskGeneration.cpp
SlideStandardization/HSD/: BackgroundMask.cpp  HSD_Model.cpp  HSD_Model.h  Transformations.cpp  Transformations.h
SlideStandardization/HoughTransform/: AveragedEllipseParameters.cpp  Ellipse.h  IAccumulator.h  Line.cpp  Line.h  LocationCell.cpp  LocationCell.h  PointCollection.h  RandomizedHoughTransform.cpp  RandomizedHoughTransform.h  TreeAccumulator.cpp  TreeAccumulator.h  WindowedTripletDetector.cpp  WindowedTripletDetector.h
SlideStandardization/IO/: CommandLineInterface.cpp  CommandLineInterface.h
SlideStandardization/IO/Logging/: LogHandler.cpp  LogHandler.h  LogLevel.cpp  LogLevel.h
SlideStandardization/Misc/: LevelReading.cpp  LevelReading.h  MiscFunctionality.h
SlideStandardization/Standardization/: MaskGeneration.h  NormalizedLutCreation.cpp  NormalizedLutCreation.h  NormalizedOutput.cpp  NormalizedOutput.h  PixelClassificationHE.cpp  PixelClassificationHE.h  SlideStandardizationCLI.cpp  SlideStandardizationCLI.h  Standardization.cpp  Standardization.h  StandardizationParameters.h  TransformCxCyDensity.cpp  TransformCxCyDensity.h
WSICS/: Main.cpp
WSICS/BLOB_Operations/: BLOB.cpp  BLOB.h  BLOB_Operations.cpp  BLOB_Operations.h  BLOB_Window.cpp  BLOB_Window.h
WSICS/Classifier/: Classifier.cpp  Classifier.h  NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  NaiveBayesFeatureClassifier.cpp  NaiveBayesFeatureClassifier.h
WSICS/HE_Staining/: HE_Classifier.cpp  HE_Classifier.h  MaskGeneration.cpp  MaskGeneration.h
WSICS/HSD/: BackgroundMask.cpp  BackgroundMask.h  HSD_Model.cpp  HSD_Model.h  Transformations.cpp  Transformations.h
WSICS/HoughTransform/: AveragedEllipseParameters.cpp  AveragedEllipseParameters.h  Ellipse.cpp  Ellipse.h  IAccumulator.h  Line.cpp  Line.h  LocationCell.cpp  LocationCell.h  PointCollection.cpp  PointCollection.h  RandomizedHoughTransform.cpp  RandomizedHoughTransform.h  TreeAccumulator.cpp  TreeAccumulator.h  WindowedTripletDetector.cpp  WindowedTripletDetector.h
WSICS/IO/: CommandLineInterface.cpp  CommandLineInterface.h
WSICS/IO/Logging/: LogHandler.cpp  LogHandler.h  LogLevel.cpp  LogLevel.h
WSICS/ML/: NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  NaiveBayesFeatureClassifier.h
WSICS/Misc/: LevelReading.cpp  LevelReading.h  MT_Singleton.cpp  MT_Singleton.h  MT_Singleton.hpp  MatrixOperations.cpp  MatrixOperations.h  MiscFunctionality.cpp  MiscMatrixOperations.cpp  MiscMatrixOperations.h  Random.cpp  Random.h
WSICS/Normalization/: CLI.cpp  CLI.h  CxCyWeights.cpp  CxCyWeights.h  NormalizedLutCreation.cpp  NormalizedLutCreation.h  NormalizedOutput.cpp  NormalizedOutput.h  PixelClassificationHE.cpp  PixelClassificationHE.h  TransformCxCyDensity.cpp  TransformCxCyDensity.h  WSICS_Algorithm.cpp  WSICS_Algorithm.h  WSICS_Parameters.h
WSICS/Standardization/: CxCyWeights.cpp  CxCyWeights.h  NormalizedLutCreation.cpp  NormalizedLutCreation.h  NormalizedOutput.cpp  NormalizedOutput.h  PixelClassificationHE.cpp  PixelClassificationHE.h  SlideStandardizationCLI.cpp  SlideStandardizationCLI.h  Standardization.h  StandardizationExecution.cpp  StandardizationParameters.h  TransformCxCyDensity.cpp  TransformCxCyDensity.h
